Client-side encryption small fixes to UI

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -194,6 +194,18 @@ div.paste {
   color:#fff;
 }
 
+.ciphertext-value{
+  float: left;
+  width: 100%;
+  min-height: 100px;
+  outline: none;
+  resize: none;
+  border: 1px solid grey;
+  background-color: #474646;
+  margin-top: 50px;
+  color:#fff;
+}
+
 .toggle .slider {
   float: left;
   margin-top: 7px;
